# isideload-apple-platform-rs

./: Cargo.toml
app-store-connect/: Cargo.toml
apple-codesign/: Cargo.toml
apple-codesign/src/: bundle_signing.rs  code_directory.rs  code_resources.rs  cryptography.rs  dmg.rs  embedded_signature.rs  embedded_signature_builder.rs  error.rs  lib.rs  macho.rs  macho_signing.rs  reader.rs  signing.rs  signing_settings.rs
apple-codesign/src/remote_signing/: mod.rs  session_negotiation.rs
apple-codesign/tests/: cli_tests.rs
apple-flat-package/: Cargo.toml
apple-xar/: Cargo.toml
apple-xar/src/: lib.rs  signing.rs
